--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@react-native-async-storage/async-storage": "^1.15.14",
     "react": "17.0.2",
     "react-native": "0.66.4",
-    "react-native-maps": "^0.29.4"
+    "react-native-gesture-handler": "^2.1.1",
+    "react-native-image-crop-picker": "^0.37.2",
+    "react-native-maps": "^0.29.4",
+    "react-native-modalize": "^2.0.13",
+    "react-native-reanimated": "^2.3.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "7.16.5",
